--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,14 +17,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>270</y>
-      <width>131</width>
-      <height>41</height>
+      <x>500</x>
+      <y>260</y>
+      <width>241</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="font">
      <font>
+      <family>Ubuntu Mono</family>
       <pointsize>20</pointsize>
      </font>
     </property>
@@ -49,6 +50,9 @@
     <property name="focusPolicy">
      <enum>Qt::ClickFocus</enum>
     </property>
+    <property name="dragEnabled">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="MyLineEdit" name="lineEdit_2">
     <property name="geometry">
@@ -71,10 +75,29 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>60</x>
       <y>140</y>
-      <width>131</width>
-      <height>41</height>
+      <width>371</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>25</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>TextLabel 5.22 +/-</string>
+    </property>
+   </widget>
+   <widget class="MyLineEdit" name="lineEdit_3">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>210</y>
+      <width>171</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -82,8 +105,11 @@
       <pointsize>20</pointsize>
      </font>
     </property>
-    <property name="text">
-     <string>TextLabel</string>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
+    <property name="dragEnabled">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
@@ -93,7 +119,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
