--- a/numpad.ui
+++ b/numpad.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>Numpad</class>
  <widget class="QWidget" name="Numpad">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>502</width>
-    <height>602</height>
+    <width>473</width>
+    <height>610</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,8 +27,8 @@
     <rect>
      <x>1</x>
      <y>1</y>
-     <width>500</width>
-     <height>600</height>
+     <width>471</width>
+     <height>608</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -37,11 +40,20 @@
    <widget class="QLabel" name="lbl_max_value">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>30</y>
-      <width>91</width>
-      <height>16</height>
+      <x>90</x>
+      <y>20</y>
+      <width>161</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>18</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="text">
      <string notr="true">TextLabel</string>
@@ -53,11 +65,20 @@
    <widget class="QLabel" name="lbl_min_value">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>90</x>
       <y>60</y>
-      <width>91</width>
-      <height>16</height>
+      <width>151</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>18</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="text">
      <string notr="true">TextLabel</string>
@@ -67,10 +88,19 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
-      <width>31</width>
-      <height>16</height>
+      <y>20</y>
+      <width>61</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>18</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="text">
      <string>Max:</string>
@@ -81,9 +111,18 @@
      <rect>
       <x>20</x>
       <y>60</y>
-      <width>31</width>
-      <height>16</height>
+      <width>61</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>18</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="text">
      <string>Min:</string>
@@ -93,16 +132,18 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>100</y>
-      <width>451</width>
+      <y>110</y>
+      <width>431</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+      <kerning>true</kerning>
      </font>
     </property>
     <property name="focusPolicy">
@@ -116,10 +157,20 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>180</y>
-      <width>93</width>
+      <y>170</y>
+      <width>101</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -148,9 +199,19 @@
      <rect>
       <x>20</x>
       <y>510</y>
-      <width>93</width>
-      <height>71</height>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -177,11 +238,21 @@
    <widget class="QPushButton" name="btn_9">
     <property name="geometry">
      <rect>
-      <x>258</x>
-      <y>255</y>
-      <width>93</width>
-      <height>71</height>
+      <x>240</x>
+      <y>240</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -209,10 +280,20 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>425</y>
-      <width>93</width>
-      <height>71</height>
+      <y>420</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -239,11 +320,21 @@
    <widget class="QPushButton" name="btn_5">
     <property name="geometry">
      <rect>
-      <x>139</x>
-      <y>340</y>
-      <width>93</width>
-      <height>71</height>
+      <x>130</x>
+      <y>330</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -270,11 +361,21 @@
    <widget class="QPushButton" name="btn_period">
     <property name="geometry">
      <rect>
-      <x>258</x>
+      <x>240</x>
       <y>510</y>
-      <width>93</width>
-      <height>71</height>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -302,10 +403,20 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>255</y>
-      <width>93</width>
-      <height>71</height>
+      <y>240</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -332,11 +443,21 @@
    <widget class="QPushButton" name="btn_2">
     <property name="geometry">
      <rect>
-      <x>139</x>
-      <y>425</y>
-      <width>93</width>
-      <height>71</height>
+      <x>130</x>
+      <y>420</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -363,11 +484,21 @@
    <widget class="QPushButton" name="btn_8">
     <property name="geometry">
      <rect>
-      <x>139</x>
-      <y>255</y>
-      <width>93</width>
-      <height>71</height>
+      <x>130</x>
+      <y>240</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -394,11 +525,21 @@
    <widget class="QPushButton" name="btn_6">
     <property name="geometry">
      <rect>
-      <x>258</x>
-      <y>340</y>
-      <width>93</width>
-      <height>71</height>
+      <x>240</x>
+      <y>330</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -426,10 +567,20 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>340</y>
-      <width>93</width>
-      <height>71</height>
+      <y>330</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -456,11 +607,21 @@
    <widget class="QPushButton" name="btn_0">
     <property name="geometry">
      <rect>
-      <x>139</x>
+      <x>130</x>
       <y>510</y>
-      <width>93</width>
-      <height>71</height>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -487,11 +648,21 @@
    <widget class="QPushButton" name="btn_3">
     <property name="geometry">
      <rect>
-      <x>258</x>
-      <y>425</y>
-      <width>93</width>
-      <height>71</height>
+      <x>240</x>
+      <y>420</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -518,11 +689,21 @@
    <widget class="QPushButton" name="btn_clear">
     <property name="geometry">
      <rect>
-      <x>377</x>
-      <y>180</y>
-      <width>93</width>
+      <x>350</x>
+      <y>170</y>
+      <width>101</width>
       <height>61</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -532,6 +713,12 @@
     </property>
     <property name="text">
      <string notr="true">Clear</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
     </property>
     <property name="btnMode" stdset="0">
      <number>2</number>
@@ -549,11 +736,21 @@
    <widget class="QPushButton" name="btn_backspace">
     <property name="geometry">
      <rect>
-      <x>377</x>
-      <y>260</y>
-      <width>93</width>
-      <height>151</height>
+      <x>350</x>
+      <y>240</y>
+      <width>101</width>
+      <height>171</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -562,7 +759,16 @@
      <string notr="true"/>
     </property>
     <property name="text">
-     <string notr="true">&lt;--</string>
+     <string notr="true">⬅</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+    <property name="autoRepeat">
+     <bool>true</bool>
     </property>
     <property name="btnMode" stdset="0">
      <number>2</number>
@@ -580,11 +786,21 @@
    <widget class="QPushButton" name="btn_enter">
     <property name="geometry">
      <rect>
-      <x>377</x>
-      <y>430</y>
-      <width>93</width>
-      <height>151</height>
+      <x>350</x>
+      <y>420</y>
+      <width>101</width>
+      <height>171</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Noto Sans Mono</family>
+      <pointsize>20</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <kerning>true</kerning>
+     </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
@@ -593,7 +809,13 @@
      <string notr="true"/>
     </property>
     <property name="text">
-     <string notr="true">Ok</string>
+     <string notr="true">✓</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
     </property>
     <property name="btnMode" stdset="0">
      <number>2</number>
